--- a/style.css
+++ b/style.css
@@ -1,41 +1,27 @@
 header .navbar {
     background-color: rgb(92, 91, 91) !important;
 }
-.btn{
-    color: black !important;
-    border: 1px solid black !important;
+
+.navbar-brand{
+    color: white !important;
 }
+
+
 .container-fluid{
     background-color: rgb(92,91,91);
 }
 
-.principal {
-    background-color: black;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+
+
+
+#btnUpdate{
+    display: none;
 }
 
 
-.CRUD {
-    background-color: rgb(92,91,91);
-    width: 1500px;
-    height: 700px;
-    margin-top: 100px;
-    margin-bottom: 100px;
-    border: 2px solid black;
-}
-
-.row {
-    margin-top: 10px !important;
-    margin-left: 20px !important;
-    margin-right: 20px !important;
-}
-
-.col {
+footer{
+    background-color: rgb(92, 91, 91);
     color: white;
-}
-
-.btn {
-    margin-left: 20px;
+    justify-content: center;
+    display: flex;
 }
